processed/jira/txt/LU/LU-18740.txt
Key:        LU-18740
Summary:    lustre/mgs/mgs_llog.c doesn't build with gccc 11.5.0
Link:       https://jira.whamcloud.com/browse/LU-18740
Type:       Bug
Priority:   Trivial
Status:     Resolved
Resolution: Fixed
Assignee:   Alex Zhuravlev
Reporter:   Alex Zhuravlev
Created:    Fri, 21 Feb 2025 03:04:15 +0000
Updated:    Wed, 21 May 2025 16:46:30 +0000
Resolved:   Thu, 20 Mar 2025 01:42:29 +0000

--- Description ---
# gcc -v
gcc version 11.5.0 20240719 (Red Hat 11.5.0-2) (GCC) 
# make
...
In function 'contain_valid_fsname',
    inlined from 'contain_valid_fsname' at /home/alexey/head2/lustre/mgs/mgs_llog.c:4989:13,
    inlined from 'mgs_lcfg_fork_handler' at /home/alexey/head2/lustre/mgs/mgs_llog.c:5027:6:
/home/alexey/head2/lustre/mgs/mgs_llog.c:4995:13: error: '__builtin_memcmp_eq' specified bound [18446744071562067968, 0] exceeds maximum object size 9223372036854775807 [-Werror=stringop-overread]
 4995 |         if (memcmp(buf, fsname, namelen) != 0)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~

--- Comment (pjones, Thu, 20 Mar 2025 01:42:29 +0000) ---
Merged for 2.17

--- Comment (gerrit, Wed, 19 Mar 2025 23:37:42 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/58142/

Subject: LU-18740 mgs: size_t in contain_valid_fsname()

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: acdf82d3360b252877ffcc7c9d90a4f1ee628bc6

--- Comment (gerrit, Fri, 21 Feb 2025 03:11:26 +0000) ---
"Alex Zhuravlev " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/58142

Subject: LU-18740 mgs: unsigned in contain_valid_fsname()

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 17a75dfdc5a6dd2fcef55b320a12d2d89fc2209d
